manifests/staging/apps/ezxss/apps_v1_deployment_ezxss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: ezxss
    app.kubernetes.io/instance: ezxss
    app.kubernetes.io/name: ezxss
    app.kubernetes.io/part-of: ezxss
  name: ezxss
  namespace: ezxss
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: ezxss
      app.kubernetes.io/instance: ezxss
      app.kubernetes.io/name: ezxss
      app.kubernetes.io/part-of: ezxss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/component: ezxss
        app.kubernetes.io/instance: ezxss
        app.kubernetes.io/name: ezxss
        app.kubernetes.io/part-of: ezxss
    spec:
      containers:
      - env:
        - name: EZXSS_DBPASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: ezxss-db-password
        image: ghcr.io/gadgetmg/ezxss:master@sha256:1932fd49829a22027c3ec5a6d6f718c3af22aeaa1869a151977360a319cf3440
        name: ezxss
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
      securityContext:
        fsGroup: 33
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
